--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.5",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
