--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
+    "cookie": "^0.5.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
     "next": "12.2.5",
+    "next-auth": "^4.12.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-cookie": "^4.1.1",
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
