--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "cookie": "^0.5.0",
+    "cookies-next": "^2.1.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
     "next": "12.2.5",
