--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
+    "axios": "^1.0.0",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
     "date-fns": "^2.29.3",
