move out from src

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,8 +1,12 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@*": ["./*"]
+      "@assets/*": ["assets/*"],
+      "@components/*": ["components/*"],
+      "@helpers/*": ["helpers/*"],
+      "@lib/*": ["lib/*"],
+      "@type/*": ["type/*"]
     }
   }
 }
