--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export -o _static",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export -o _static"
+    "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
