--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export -o _static",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export -o _static"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
@@ -21,6 +22,8 @@
     "dayjs": "^1.11.5",
     "next": "12.2.5",
     "next-auth": "^4.12.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
