--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "next": "12.2.5",
     "next-auth": "^4.12.0",
     "next-compose-plugins": "^2.2.1",
+    "next-i18next": "^12.1.0",
+    "next-language-detector": "^1.0.2",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
