--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export -o _static"
+    "export": "next build && next export",
+    "serve": "serve out"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
@@ -29,7 +30,8 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "serve": "^14.0.1"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
