--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
+    "@tanstack/react-query": "^4.10.3",
     "axios": "^1.0.0",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
@@ -29,19 +30,28 @@
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.4",
-    "serve": "^14.0.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "autoprefixer": "^10.4.8",
-    "eslint": "8.23.0",
+    "eslint": "^8.0.1",
     "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.10",
     "postcss": "^8.4.16",
+    "prettier": "2.7.1",
+    "prettier-tslint": "^0.4.2",
+    "serve": "^14.0.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.8.2"
+    "typescript": "*"
   }
 }
