--- a/package.json
+++ b/package.json
@@ -18,27 +18,24 @@
     "@tailwindcss/typography": "^0.5.7",
     "@tanstack/react-query": "^4.10.3",
     "axios": "^1.0.0",
-    "cookie": "^0.5.0",
-    "cookies-next": "^2.1.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
     "next": "12.2.5",
     "next-auth": "^4.12.0",
-    "next-compose-plugins": "^2.2.1",
     "next-i18next": "^12.1.0",
-    "next-language-detector": "^1.0.2",
     "next-pwa": "^5.6.0",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
-    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "autoprefixer": "^10.4.8",
-    "eslint": "^8.0.1",
+    "eslint": "^8.25.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -52,6 +49,6 @@
     "prettier-tslint": "^0.4.2",
     "serve": "^14.0.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "*"
+    "typescript": "^4.8.4"
   }
 }
