--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "next-pwa": "^5.6.0",
     "nookies": "^2.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
