--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.38.0"
+    "react-hook-form": "^7.38.0",
+    "zustand": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
@@ -46,6 +47,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
     "prettier-tslint": "^0.4.2",
