--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
+    "react-hot-toast": "^2.4.0",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
