--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
+    "react-select": "^5.5.6",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
