chore: fix prettier

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,33 +2,15 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@assets/*": [
-        "src/assets/*"
-      ],
-      "@components/*": [
-        "src/components/*"
-      ],
-      "@helpers/*": [
-        "src/helpers/*"
-      ],
-      "@interfaces/*": [
-        "src/interfaces/*"
-      ],
-      "@lib/*": [
-        "src/lib/*"
-      ],
-      "@types/*": [
-        "src/types/*"
-      ],
-      "@api/*": [
-        "src/api/*"
-      ],
-      "@utils/*": [
-        "src/utils/*"
-      ],
-      "@queries/*": [
-        "src/queries/*"
-      ] // for react-query
+      "@assets/*": ["src/assets/*"],
+      "@components/*": ["src/components/*"],
+      "@helpers/*": ["src/helpers/*"],
+      "@interfaces/*": ["src/interfaces/*"],
+      "@lib/*": ["src/lib/*"],
+      "@types/*": ["src/types/*"],
+      "@api/*": ["src/api/*"],
+      "@utils/*": ["src/utils/*"],
+      "@queries/*": ["src/queries/*"] // for react-query
     }
   }
 }
