--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,7 +10,8 @@
       "@types/*": ["src/types/*"],
       "@api/*": ["src/api/*"],
       "@utils/*": ["src/utils/*"],
-      "@queries/*": ["src/queries/*"] // for react-query
+      "@queries/*": ["src/queries/*"], // for react-query
+      "@zustand/*": ["src/zustand/*"]
     }
   }
 }
