--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.0.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
+    "easymde": "^2.18.0",
     "next": "12.2.5",
     "next-auth": "^4.12.0",
     "next-i18next": "^12.1.0",
@@ -31,6 +32,7 @@
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
     "react-select": "^5.5.6",
+    "react-simplemde-editor": "^5.2.0",
     "zustand": "^4.1.3"
   },
   "devDependencies": {
