chore: update tailwind and ts base

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,7 +12,8 @@
       "@utils/*": ["src/utils/*"],
       "@queries/*": ["src/queries/*"],  // for react-query
       "@zustand/*": ["src/zustand/*"],
-      "@constants/*": ["src/constants/*"]
+      "@constants/*": ["src/constants/*"],
+      "@theme/*": ["src/theme/*"]
     }
   }
 }
