profile page saves data

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.6.0",
     "react-select": "^5.5.6",
     "react-simplemde-editor": "^5.2.0",
     "zustand": "^4.1.3"
