--- a/package.json
+++ b/package.json
@@ -26,17 +26,20 @@
     "next-auth": "^4.12.0",
     "next-i18next": "^12.1.0",
     "next-pwa": "^5.6.0",
+    "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-markdown": "^8.0.3",
     "react-select": "^5.5.6",
     "react-simplemde-editor": "^5.2.0",
     "zustand": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
+    "@types/qs": "^6.9.7",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
